--- a/notebooks/population.ipynb
+++ b/notebooks/population.ipynb
@@ -32,6 +32,7 @@
     "df = pandas.read_csv('../data/atlantis.csv')\n",
     "x = df['year']\n",
     "y = df['population']\n",
+    "print(df)\n",
     "\n",
     "plt.plot(x,y)\n",
     "plt.title(\"Population of Atlantis\")\n",
